--- a/html_examples/portfolio/toplist/style.css
+++ b/html_examples/portfolio/toplist/style.css
@@ -2,6 +2,11 @@ p {
 	
 }
 
+h1 {
+	background-color: #33BEBE;
+	color: white;
+}
+
 .app {
 	display: flex;
 	display: -webkit-flex
@@ -9,19 +14,14 @@ p {
 
 .screenshot {
 	max-width: 460px;
+	margin-right: 30px;
 }
 
 .description {
 	width: 705px;
+	color: #7C8B88;
 }
 
 * {
-   outline: 1px solid red !important;
+	font-family: sans-serif;
 }
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-} 
