--- a/html_examples/portfolio/framework/css/main.css
+++ b/html_examples/portfolio/framework/css/main.css
@@ -9,6 +9,13 @@
     box-sizing: border-box;
 }
 
+/* only apply this style if the screen is less than 300px wide */
+@media only screen and (max-width: 300px) {
+	p {
+		background-color: blue;
+	}
+}
+
 .grid {
     margin: 0 auto;
     max-width: 1200px;
