--- a/html_examples/Start/main.css
+++ b/html_examples/Start/main.css
@@ -102,7 +102,7 @@ img {
   width: 24%;
   text-align: center;
   line-height: 24px;
-  padding: 24px;
+  padding: 1.5em;
   text-transform: uppercase;
 }
 
