--- a/html_examples/Start/main.css
+++ b/html_examples/Start/main.css
@@ -102,13 +102,14 @@ img {
   width: 24%;
   text-align: center;
   line-height: 24px;
-  padding: 1.5em;
+  padding: 24px;
   text-transform: uppercase;
 }
 
 .nav a {
   text-decoration: none;
   color: #616161;
+  padding: 1.5em;
 }
 
 .nav a:hover {
@@ -203,6 +204,7 @@ main {
 .top-news__item a {
   text-decoration: none;
   color: #666;
+  padding: 1.5em inherit;
 }
 
 .top-news__item a:hover,
@@ -345,6 +347,7 @@ main {
 .snippet__title a {
   text-decoration: none;
   color: #666;
+  padding: 1.5em;
 }
 
 .snippet__title a:hover,
@@ -373,4 +376,5 @@ footer li {
 footer a {
   text-decoration: none;
   color: #333;
+  padding: 1.5em;
 }
